tests/rosetta/out/Fortran/binary-digits.error
gfortran: exit status 1
/tmp/binary-digits.f90:22:14:

   22 |       bits = (s0 + bits)
      |              1
Error: Operands of binary numeric operator ‘+’ at (1) are CHARACTER(100)/CHARACTER(100)
